# neurograph

./: .clippy.toml  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  Dockerfile  LICENSE  MAINTAINERS.md  OSSF_SECURITY_INSIGHTS.yml  RAI_TRANSPARENCY.md  README.md  SECURITY.md  SUPPORT.md  cliff.toml  deny.toml  docker-compose.yml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  crate-publish.yml  dependency-review.yml  docker-publish.yml  npm-publish.yml  openssf.yml  python-publish.yml  release.yml
benchmarks/: README.md
crates/neurograph-cli/: Cargo.toml
crates/neurograph-cli/src/: main.rs
crates/neurograph-core/: Cargo.toml
crates/neurograph-core/benches/: community_benchmarks.rs  engine_benchmarks.rs  search_benchmarks.rs  temporal_benchmarks.rs
crates/neurograph-core/src/: config.rs  lib.rs
crates/neurograph-core/src/chat/: agent.rs  context.rs  history.rs  intent.rs  mod.rs  rag.rs  repl.rs  response.rs  tools.rs
crates/neurograph-core/src/community/: incremental.rs  leiden.rs  louvain.rs  mod.rs  summarizer.rs
crates/neurograph-core/src/drivers/: embedded.rs  memory.rs  mod.rs  traits.rs
crates/neurograph-core/src/embedders/: alignment.rs  cache.rs  config_file.rs  fastembed.rs  hnsw.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  providers.rs  router.rs  traits.rs
crates/neurograph-core/src/embeddings/: mod.rs
crates/neurograph-core/src/engine/: budget.rs  context.rs  mod.rs  router.rs
crates/neurograph-core/src/engine/strategies/: global.rs  local.rs  mod.rs  traits.rs
crates/neurograph-core/src/graph/: community.rs  entity.rs  episode.rs  fact.rs  mod.rs  ontology.rs  relationship.rs  saga.rs  schema.rs
crates/neurograph-core/src/ingestion/: conflict.rs  deduplication.rs  mod.rs  pipeline.rs  validators.rs
crates/neurograph-core/src/ingestion/extractors/: json.rs  mod.rs  text.rs  traits.rs
crates/neurograph-core/src/llm/: cache.rs  config.rs  generic.rs  mod.rs  openai.rs  registry.rs  router.rs  token_tracker.rs  traits.rs
crates/neurograph-core/src/llm/providers/: anthropic.rs  gemini.rs  mod.rs  openai_compat.rs
crates/neurograph-core/src/memory/: evolution.rs  mod.rs  tiered.rs  zettelkasten.rs
crates/neurograph-core/src/multigraph/: causal.rs  entity.rs  fusion.rs  intent.rs  mod.rs  semantic.rs  temporal.rs
crates/neurograph-core/src/papers/: aggregator.rs  arxiv.rs  mod.rs  pubmed.rs  semantic_scholar.rs
crates/neurograph-core/src/pdf/: academic.rs  chunker.rs  classifier.rs  fast.rs  mod.rs  types.rs
crates/neurograph-core/src/retrieval/: bm25.rs  cross_encoder.rs  drift.rs  episode_mentions.rs  hybrid.rs  keyword.rs  mmr.rs  mod.rs  node_distance.rs  ppr.rs  recipes.rs  reranker.rs  search_config.rs  search_recipes.rs  search_results.rs  semantic.rs  traversal.rs
crates/neurograph-core/src/server/: chat_routes.rs  embed.rs  mod.rs  routes.rs  settings.rs  state.rs  static_files.rs
crates/neurograph-core/src/temporal/: branch.rs  clock.rs  forgetting.rs  manager.rs  mod.rs  versioning.rs
crates/neurograph-core/src/utils/: concurrency.rs  hashing.rs  mod.rs  text.rs
crates/neurograph-core/tests/: test_community.rs  test_community_correctness.rs  test_cost_tracking.rs  test_drivers.rs  test_ingestion.rs  test_neurograph.rs  test_retrieval.rs  test_search_correctness.rs  test_temporal.rs  test_temporal_scenarios.rs
crates/neurograph-embed-server/: Cargo.toml
crates/neurograph-embed-server/src/: main.rs
crates/neurograph-eval/: Cargo.toml
crates/neurograph-eval/src/: ablation.rs  lib.rs  longmemeval.rs  main.rs
crates/neurograph-mcp/: Cargo.toml
crates/neurograph-mcp/src/: main.rs  tools.rs
dashboard/: nginx.conf  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
dashboard/src/components/: BranchDiffPanel.tsx  ChatPanel.tsx  EmbeddingPanel.tsx  GraphCanvas.tsx  GraphToolbar.tsx  GraphViewSwitcher.tsx  Legend.tsx  NodeDetailPanel.tsx  ProviderIcons.tsx  QueryPanel.tsx  SearchBar.tsx  SettingsModal.tsx  Sidebar.tsx  StatsBar.tsx  ThemeToggle.tsx  TimelineSlider.tsx
dashboard/src/data/: mock.ts
dashboard/src/graph/: config.ts  palette.ts  theme.ts  transforms.ts
dashboard/src/store/: chatStore.ts  graphStore.ts
dashboard/src/styles/: animations.css  index.css  layout.css  variables.css
dashboard/src/types/: chat.ts  graph.ts  settings.ts
deploy/: docker-compose.dev.yml  docker-compose.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.minimal  docker-entrypoint.sh
docs/: architecture.md  community.md  embeddings.md  intent-memory.md  neurograph_paper.tex  neurograph_research_paper.tex  temporal.md
examples/: embedding_visualization.html  quickstart.py
mcp-config/: claude_desktop_config.json  cursor_config.json
sdk/typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  errors.ts  index.ts  types.ts
