[workspace]
resolver = "2"
members = [
    "crates/neurograph-core",
    "crates/neurograph-mcp",
    # "crates/neurograph-wasm",    # Sprint 4
    # "crates/neurograph-python",  # Sprint 4
    # "crates/neurograph-cli",     # Sprint 4
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Ashutosh Kumar Singh <ashutosh@neurograph.dev>"]
license = "Apache-2.0"
repository = "https://github.com/neurographai/neurograph"
homepage = "https://neurograph.dev"
description = "The Operating System for AI Knowledge — ingest anything, remember everything, forget intelligently, reason visually."
readme = "README.md"
keywords = ["knowledge-graph", "rag", "temporal", "ai", "graph"]
categories = ["science", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Graph algorithms
petgraph = "0.6"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Web server (Sprint 4)
# axum = "0.7"
# tower = "0.4"
# tower-http = { version = "0.5", features = ["cors", "trace"] }
# tokio-tungstenite = "0.23"

# Embedded storage
sled = "0.34"

# OpenAI
async-openai = "0.25"

# Hashing
sha2 = "0.10"
blake3 = "1"

# Misc
ordered-float = { version = "4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
rand = "0.8"
regex = "1"
