[package]
name = "neurograph-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core temporal knowledge graph engine for NeuroGraph — bi-temporal facts, community detection, hybrid retrieval"
readme = "../../README.md"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Data types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Graph algorithms
petgraph = { workspace = true }

# HTTP client (for LLM API calls + embedding APIs)
reqwest = { workspace = true }

# Note: async-openai removed — replaced by openai_compatible.rs
# which uses raw reqwest for all OpenAI-format APIs

# Hashing
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }

# Collections & concurrency
ordered-float = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }

# Embedded storage (sled)
sled = { workspace = true }

# Embedding cache (always available)
seahash = { workspace = true }
lru = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

# Optional — PDF
pdf-extract = { workspace = true, optional = true }
lopdf = { workspace = true, optional = true }

# Optional — Paper search
quick-xml = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }

# Optional — Chat REPL
crossterm = { workspace = true, optional = true }
colored = { workspace = true, optional = true }

# Optional — REST server
axum = { version = "0.8", features = ["multipart", "ws"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[features]
default = ["multigraph", "tiered-memory", "rl-forgetting", "pdf"]
multigraph = []
tiered-memory = []
rl-forgetting = []
pdf = ["dep:pdf-extract", "dep:lopdf"]
paper-search = ["dep:quick-xml", "dep:urlencoding"]
chat = ["dep:crossterm", "dep:colored"]
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:rust-embed", "dep:mime_guess"]
full = ["multigraph", "tiered-memory", "rl-forgetting", "pdf", "paper-search", "chat", "server"]
# neo4j = []
# falkordb = []
# multimodal = []

[[test]]
name = "test_neurograph"
path = "tests/test_neurograph.rs"

[[test]]
name = "test_drivers"
path = "tests/test_drivers.rs"

[[test]]
name = "test_ingestion"
path = "tests/test_ingestion.rs"

[[test]]
name = "test_retrieval"
path = "tests/test_retrieval.rs"

[[test]]
name = "test_temporal_scenarios"
path = "tests/test_temporal_scenarios.rs"

[[test]]
name = "test_community_correctness"
path = "tests/test_community_correctness.rs"

[[test]]
name = "test_search_correctness"
path = "tests/test_search_correctness.rs"

[[test]]
name = "test_cost_tracking"
path = "tests/test_cost_tracking.rs"

[[bench]]
name = "engine_benchmarks"
harness = false

[[bench]]
name = "search_benchmarks"
harness = false

[[bench]]
name = "community_benchmarks"
harness = false

[[bench]]
name = "temporal_benchmarks"
harness = false
