[package]
name = "neurograph-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmarking harness for NeuroGraph — LongMemEval, NeuroGraphBench, and competitive evaluation"
publish = false

[[bin]]
name = "neurograph-eval"
path = "src/main.rs"

[dependencies]
# Core
neurograph-core = { path = "../neurograph-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Data types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
